--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 </div>
                 <!-- filter input; you will add attributes to make this filter the list based on value entered -->
                 <div class="filter-ui">
-                    <input type="text" class="form-control" placeholder="Search...">
+                    <input type="text" class="form-control" placeholder="Search..." ng-model="search">
                 </div>
             </section>
 
             <section>
                 <ul class="cards">
-                    <li class="card" ng-repeat="employee in employees">
+                    <li class="card" ng-repeat="employee in employees | filter : search | orderBy : order : reverse">
                         <!-- this img should show the employee picture --> 
                         <img alt="picture of employee.firstName employee.lastName" ng-src="{{employee.picUrl}}">
                         <div class="details">
